# proposify-ai

./: .dockerignore  .env  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
core/: choices.py  permissions.py
credits/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
credits/migrations/: 0001_initial.py  0002_plan_slug.py  0003_alter_plan_options_usercredit.py  0004_usercredit_is_active.py  0005_alter_usercredit_user.py  0006_alter_usercredit_user.py  0007_alter_usercredit_user.py
jobs/: admin.py  choices.py  models.py  prompts.py  serializers.py  tasks.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_rename_input_job_user_prompt.py  0003_rename_job_post_proposal_prompt.py  0004_proposal_llm.py
llm_models/: admin.py  ai_services.py  apps.py  choices.py  models.py
llm_models/migrations/: 0001_initial.py  0002_alter_llm_active_alter_llm_api_endpoint_and_more.py  0003_alter_llm_provider.py
proposify_ai/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
subsctiptions/: admin.py  apps.py  choices.py  models.py  serializers.py  urls.py  views.py
subsctiptions/migrations/: 0001_initial.py  0002_alter_subsctiption_plan.py  0003_payment.py  0004_alter_payment_method.py  0005_alter_payment_status.py
users/: admin.py  apps.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_userskill.py  0003_alter_userskill_unique_together.py  0004_userexperience.py  0005_userexperience_currently_working.py  0006_usereducation.py
(+1 files in other folders)
